--- a/TypeScript/package.json
+++ b/TypeScript/package.json
@@ -4,10 +4,16 @@
   "main": "main.ts",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node main.ts"
+    "start": "ts-node main.ts",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4"
   }
 }
